Fix alignment of info value

--- a/src/components/GeneralInfo/GeneralInfo.css
+++ b/src/components/GeneralInfo/GeneralInfo.css
@@ -22,3 +22,7 @@
 .GeneralInfo-info-label {
     color: #4e4e4e;
 }
+
+.GeneralInfo-info-value {
+    text-align: end;
+}
